--- a/client-app/src/app/home/mantenimiento/orden-trabajo/lista-orden-trabajo-atendidas/lista-orden-trabajo-atendidas.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/lista-orden-trabajo-atendidas/lista-orden-trabajo-atendidas.component.html
@@ -62,15 +62,11 @@
       </div>
     </clr-dg-placeholder>
     <clr-dg-row *ngFor="let ordenTrabajo of ordenTrabajoList">
-      <clr-dg-cell>{{ordenTrabajo.fechaRealizacion}}</clr-dg-cell>
+      <clr-dg-cell>{{ordenTrabajo.fechaSolicitud}}</clr-dg-cell>
       <clr-dg-cell>{{ordenTrabajo.estado}}</clr-dg-cell>
       <clr-dg-cell>{{ordenTrabajo.tipoServicio}}</clr-dg-cell>
       <clr-dg-cell>{{ordenTrabajo.diagnostico}}</clr-dg-cell>
-      <clr-dg-cell>
-        <ul class="list-unstyled" *ngFor="let equipo of ordenTrabajo.equipos">
-          <li>{{equipo.numeroSerie}}-{{equipo.descripcionEquipo}}</li>
-        </ul>
-      </clr-dg-cell>
+      <clr-dg-cell>{{ordenTrabajo.equipo?.numeroSerie}} - {{ordenTrabajo.equipo?.descripcionEquipo}}</clr-dg-cell>
       <clr-dg-cell>
         <a class="btn btn-sm btn-warning"
            (click)="editarMantenimineto(ordenTrabajo.id)">
