--- a/client-app/src/app/home/mantenimiento/repuestos/add-repuesto/add-repuesto.component.html
+++ b/client-app/src/app/home/mantenimiento/repuestos/add-repuesto/add-repuesto.component.html
@@ -124,11 +124,11 @@
 
           <div class="form-group row flex-items-xs-left">
             <div class="col-xs-4 col-label-repuesto">
-              <label class="form-repuesto-label" for="cantidadRes">Cant. Restante:</label>
+              <label class="form-repuesto-label" for="cantidadRes">Cant. Existente:</label>
             </div>
             <div class="col-xs-5">
               <input class="form-control" id="cantidadRes" [disabled]="readonlyField"
-                     name="cantidadRes" [(ngModel)]="cantRestante" tabindex="5">
+                     name="cantidadRes" [(ngModel)]="cantExistente" tabindex="5">
             </div>
           </div>
 
