--- a/client-app/src/app/home/mantenimiento/orden-trabajo/add-orden-trabajo/add-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/add-orden-trabajo/add-orden-trabajo.component.html
@@ -170,37 +170,12 @@
       </div>
     </div>
 
-    <clr-datagrid>
-      <clr-dg-action-bar>
-        <div class="btn-group">
-          <a type="button" class="btn btn-sm btn-secondary"
-                  [hidden]="!showAgregarBtn"
-                  (click)="onAddEquipo()">
-            <clr-icon shape="plus"></clr-icon>
-            Agregar
-          </a>
-        </div>
-      </clr-dg-action-bar>
-      <clr-dg-column>Nro. Serie</clr-dg-column>
-      <clr-dg-column>Nro. Patrimonial</clr-dg-column>
-      <clr-dg-column>Tipo</clr-dg-column>
-      <clr-dg-column>Modelo</clr-dg-column>
-      <clr-dg-column>Ubicación</clr-dg-column>
-      <clr-dg-column></clr-dg-column>
-      <clr-dg-row *ngFor="let equipo of equipos">
-        <clr-dg-cell>{{equipo.numeroSerie}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.numeroPatrimonial}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.tipoEquipo?.tipo}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.modeloEquipo?.modelo}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.ubicacion?.numeroSala}}</clr-dg-cell>
-        <clr-dg-cell>
-          <a class="btn btn-sm btn-warning"
-                  (click)="onRemoveEquipo(equipo.id)">
-            Eliminar
-          </a>
-        </clr-dg-cell>
-      </clr-dg-row>
-    </clr-datagrid>
+<!--    <a type="button" class="btn btn-sm btn-secondary"-->
+<!--       [hidden]="!showAgregarBtn"-->
+<!--       (click)="onAddEquipo()">-->
+<!--      <clr-icon shape="plus"></clr-icon>-->
+<!--      Agregar-->
+<!--    </a>-->
   </section>
   <hr>
   <h4 class="form-orden-trabajo-sub-title">Repuestos Solicitados</h4>
@@ -226,17 +201,6 @@
       <div class="col-xs-2">
         <label class="form-orden-trabajo-label">Solicitud Repuesto:</label>
       </div>
-<!--      <div class="col-xs-2">-->
-<!--        <input class="form-control" id="codigoRep"-->
-<!--               name="solicitudRepId" #solRepId-->
-<!--               [(ngModel)]="solicitudRepId">-->
-<!--      </div>-->
-<!--      <div class="col-xs-1 col-btn-buscar-solicitud">-->
-<!--        <a class="btn btn-sm btn-success"-->
-<!--                (click)="buscarSolicitudRepuestoById()">-->
-<!--          <clr-icon shape="search"></clr-icon>-->
-<!--        </a>-->
-<!--      </div>-->
       <div class="col-xs-3">
         <div class="select form-control">
           <select clrSelect name="representante" [(ngModel)]="solicitudRepId"
@@ -248,12 +212,6 @@
           </select>
         </div>
       </div>
-<!--      <clr-tooltip>-->
-<!--        <clr-icon clrTooltipTrigger shape="info-circle" size="24" aria-label="Uniq tooltip 1"></clr-icon>-->
-<!--        <clr-tooltip-content clrPosition="top-right" clrSize="lg" *clrIfOpen>-->
-<!--          <span>Buscar una Solicitud de Repuesto</span>-->
-<!--        </clr-tooltip-content>-->
-<!--      </clr-tooltip>-->
     </div>
   </section>
 
@@ -261,7 +219,7 @@
     <clr-dg-action-bar>
       <div class="btn-group">
         <a type="button" class="btn btn-sm btn-secondary"
-                (click)="agregarRepuesto()">
+           (click)="agregarRepuesto()">
           <clr-icon shape="plus"></clr-icon>
           Agregar Repuesto
         </a>
@@ -269,21 +227,29 @@
     </clr-dg-action-bar>
     <clr-dg-column>Código</clr-dg-column>
     <clr-dg-column>Descripción</clr-dg-column>
-    <clr-dg-column>Cantidad Adquirida</clr-dg-column>
+    <clr-dg-column>Tipo</clr-dg-column>
+    <clr-dg-column>Marca</clr-dg-column>
+    <clr-dg-column>Modelo</clr-dg-column>
+    <clr-dg-column>Representante</clr-dg-column>
     <clr-dg-column>Precio</clr-dg-column>
+    <clr-dg-column>Cantidad Solicitada</clr-dg-column>
     <clr-dg-column></clr-dg-column>
-    <clr-dg-row *ngFor="let repuesto of repuestos">
-      <clr-dg-cell>{{repuesto.codigo}}</clr-dg-cell>
-      <clr-dg-cell>{{repuesto.descripcionArticulo}}</clr-dg-cell>
-      <clr-dg-cell>{{repuesto.cantidadAdquirida}}</clr-dg-cell>
-      <clr-dg-cell>{{repuesto.precio}}</clr-dg-cell>
+    <clr-dg-row *ngFor="let detalle of solicitudRepuestoDetalles">
+      <clr-dg-cell>{{detalle.repuesto?.codigo}}</clr-dg-cell>
+      <clr-dg-cell>{{detalle.repuesto?.descripcionArticulo}}</clr-dg-cell>
+      <clr-dg-cell>{{detalle.repuesto?.tipoEquipo?.tipo}}</clr-dg-cell>
+      <clr-dg-cell>{{detalle.repuesto?.modeloEquipo?.marca}}</clr-dg-cell>
+      <clr-dg-cell>{{detalle.repuesto?.modeloEquipo?.modelo}}</clr-dg-cell>
+      <clr-dg-cell>{{detalle.repuesto?.representante?.nombre}}</clr-dg-cell>
+      <clr-dg-cell>{{detalle.repuesto?.precio}}</clr-dg-cell>
+      <clr-dg-cell>{{detalle.cantidadSolicitada}}</clr-dg-cell>
       <clr-dg-cell>
         <a class="btn btn-sm btn-warning"
-                (click)="eliminarRepuesto(repuesto, true)">
+           (click)="eliminarDetalleRepuesto(detalle, true)">
           Eliminar
         </a>
         <a type="button" class="btn btn-sm btn-secondary"
-           (click)="editarRepuesto(repuesto)">
+           (click)="editarRepuesto(detalle)">
           <clr-icon shape="plus"></clr-icon>
           Editar
         </a>
@@ -294,13 +260,13 @@
 
   <section class="form-block">
     <a class="btn btn-sm btn-success"
-            (click)="onSaveAddOrdenTrabajo()">
+       (click)="onSaveAddOrdenTrabajo()">
       <clr-icon shape="floppy"></clr-icon>
       Save
     </a>
 
     <a class="btn btn-sm btn-secondary"
-            (click)="goBack()">
+       (click)="goBack()">
       <clr-icon shape="window-close"></clr-icon>
       Cancel
     </a>
@@ -308,10 +274,11 @@
 </form>
 
 <!--Modal para agregar o editar los datos de un repuesto-->
-<app-repuesto *ngIf="modalAddEditRepuestoOpen"
-              [repuesto]="repuestoSeleccionado"
-              [isEditRepuesto]="isEditRepuesto"
-              (repuestoToUpdate)="addEditRepuesto($event)"
-              (cancelAddEditRepuesto)="onCancelAddEditRepuesto($event)">
-</app-repuesto>
+<app-solicitud-repuesto-detalle *ngIf="modalAddEditDetalleOpen"
+                                [solicitudRepuestoDetalle]="detalleSeleccionado"
+                                [isEditRepuesto]="isEditDetalle"
+                                [isAtenderOT]="false"
+                                (detalleRepuestoToUpdate)="addEditRepuesto($event)"
+                                (cancelAddEditRepuesto)="onCancelAddEditRepuesto($event)">
+</app-solicitud-repuesto-detalle>
 
