--- a/client-app/src/app/home/mantenimiento/solicitud-repuesto/add-solicitud/add-solicitud.component.html
+++ b/client-app/src/app/home/mantenimiento/solicitud-repuesto/add-solicitud/add-solicitud.component.html
@@ -1,61 +1,69 @@
 <h2 class="form-add-edit-sol-repuesto-title">Crear Solicitud de Repuestos</h2>
 <form class="compact" #repuestoForm="ngForm">
-    <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-1">
-        <label class="form-add-edit-repuesto-label required" for="estado">Estado:</label>
-      </div>
-      <div class="col-xs-3">
-        <input class="form-control" id="estado" required
-               name="codigoDes" [(ngModel)]="estado">
-      </div>
-      <div class="col-xs-1"></div>
-      <div class="col-xs-1">
-        <label class="form-add-edit-repuesto-label">Fecha:</label>
-      </div>
-      <div class="col-xs-2">
-        <clr-date-container>
-          <input type="date" clrDate name="fechaFin" [(ngModel)]="fechaSolicitud"
-                 min="2000-01-01" max="2030-12-31">
-        </clr-date-container>
-      </div>
+  <div class="form-group row flex-items-xs-left">
+    <div class="col-xs-1">
+      <label class="form-add-edit-repuesto-label required" for="estado">Estado:</label>
     </div>
+    <div class="col-xs-3">
+      <input class="form-control" id="estado" required
+             name="codigoDes" [(ngModel)]="estado">
+    </div>
+    <div class="col-xs-1"></div>
+    <div class="col-xs-1">
+      <label class="form-add-edit-repuesto-label">Fecha:</label>
+    </div>
+    <div class="col-xs-2">
+      <clr-date-container>
+        <input type="date" clrDate name="fechaFin" [(ngModel)]="fechaSolicitud"
+               min="2000-01-01" max="2030-12-31">
+      </clr-date-container>
+    </div>
+  </div>
 
-    <h5 class="form-add-edit-sol-repuesto-sub-title">Repuestos</h5>
-    <section>
-      <clr-datagrid>
-        <clr-dg-action-bar>
-          <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-secondary"
-                    (click)="addNewRepuesto()">
-              <clr-icon shape="plus"></clr-icon>
-              Agregar
-            </button>
-          </div>
-        </clr-dg-action-bar>
-        <clr-dg-column>Código</clr-dg-column>
-        <clr-dg-column>Descripción</clr-dg-column>
-        <clr-dg-column>Cantidad Adquirida</clr-dg-column>
-        <clr-dg-column>Precio</clr-dg-column>
-        <clr-dg-column></clr-dg-column>
-        <clr-dg-row *ngFor="let repuesto of repuestos">
-          <clr-dg-cell>{{repuesto?.codigo}}</clr-dg-cell>
-          <clr-dg-cell>{{repuesto?.descripcionArticulo}}</clr-dg-cell>
-          <clr-dg-cell>{{repuesto?.cantidadAdquirida}}</clr-dg-cell>
-          <clr-dg-cell>{{repuesto?.precio}}</clr-dg-cell>
-          <clr-dg-cell>
-            <button class="btn btn-sm btn-warning"
-                    (click)="eliminarRepuesto(repuesto)">
-              <clr-icon shape="trash"></clr-icon>
-            </button>
-
-            <button type="button" class="btn btn-sm btn-secondary"
-                    (click)="editRepuesto(repuesto)">
-              <clr-icon shape="pencil"></clr-icon>
-            </button>
-          </clr-dg-cell>
-        </clr-dg-row>
-      </clr-datagrid>
-    </section>
+  <h5 class="form-add-edit-sol-repuesto-sub-title">Repuestos</h5>
+  <section>
+    <clr-datagrid>
+      <clr-dg-action-bar>
+        <div class="btn-group">
+          <button type="button" class="btn btn-sm btn-secondary"
+                  (click)="addNewRepuesto()">
+            <clr-icon shape="plus"></clr-icon>
+            Agregar
+          </button>
+        </div>
+      </clr-dg-action-bar>
+      <clr-dg-column>Código</clr-dg-column>
+      <clr-dg-column>Descripción</clr-dg-column>
+      <clr-dg-column>Tipo</clr-dg-column>
+      <clr-dg-column>Marca</clr-dg-column>
+      <clr-dg-column>Modelo</clr-dg-column>
+      <clr-dg-column>Representante</clr-dg-column>
+      <clr-dg-column>Precio</clr-dg-column>
+      <clr-dg-column>Cantidad Solicitada</clr-dg-column>
+      <clr-dg-column></clr-dg-column>
+      <clr-dg-row *ngFor="let detalle of solicitudRepuestoDetalles">
+        <clr-dg-cell>{{detalle.repuesto?.codigo}}</clr-dg-cell>
+        <clr-dg-cell>{{detalle.repuesto?.descripcionArticulo}}</clr-dg-cell>
+        <clr-dg-cell>{{detalle.repuesto?.tipoEquipo?.tipo}}</clr-dg-cell>
+        <clr-dg-cell>{{detalle.repuesto?.modeloEquipo?.marca}}</clr-dg-cell>
+        <clr-dg-cell>{{detalle.repuesto?.modeloEquipo?.modelo}}</clr-dg-cell>
+        <clr-dg-cell>{{detalle.repuesto?.representante?.nombre}}</clr-dg-cell>
+        <clr-dg-cell>{{detalle.repuesto?.precio}}</clr-dg-cell>
+        <clr-dg-cell>{{detalle.cantidadSolicitada}}</clr-dg-cell>
+        <clr-dg-cell>
+          <a class="btn btn-sm btn-warning"
+             (click)="eliminarDetalleRepuesto(detalle)">
+            Eliminar
+          </a>
+          <a type="button" class="btn btn-sm btn-secondary"
+             (click)="editRepuesto(detalle)">
+            <clr-icon shape="plus"></clr-icon>
+            Editar
+          </a>
+        </clr-dg-cell>
+      </clr-dg-row>
+    </clr-datagrid>
+  </section>
 
   <section class="form-block">
     <button class="btn btn-sm btn-success"
@@ -74,9 +82,10 @@
 </form>
 
 <!--Modal para agregar o editar los datos de un repuesto-->
-<app-repuesto *ngIf="modalAddEditRepuestoOpen"
-              [repuesto]="repuestoSeleccionado"
-              [isEditRepuesto]="isEditRepuesto"
-              (repuestoToUpdate)="closeRepuestoModal($event)"
-              (cancelAddEditRepuesto)="closeRepuestoModal($event)">
-</app-repuesto>
+<app-solicitud-repuesto-detalle *ngIf="modalAddEditDetalleOpen"
+                                [solicitudRepuestoDetalle]="detalleSeleccionado"
+                                [isEditRepuesto]="isEditDetalle"
+                                [isAtenderOT]="false"
+                                (detalleRepuestoToUpdate)="closeRepuestoModal($event)"
+                                (cancelAddEditRepuesto)="closeRepuestoModal($event)">
+</app-solicitud-repuesto-detalle>
