--- a/client-app/src/app/home/mantenimiento/solicitud-repuesto/add-solicitud/add-solicitud.component.css
+++ b/client-app/src/app/home/mantenimiento/solicitud-repuesto/add-solicitud/add-solicitud.component.css
@@ -11,3 +11,19 @@
 .form-add-edit-sol-repuesto-label {
   font-weight: bold !important;
 }
+
+.table-header {
+  font-size: 13px !important;
+  font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif !important;
+  text-align: center !important;
+}
+
+.table-column {
+  font-size: 12px !important;
+  font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif !important;
+}
+
+.cod-cant-field {
+  min-width: 5% !important;
+  width: 5% !important;
+}
