--- a/client-app/src/app/home/mantenimiento/orden-trabajo/edit-mantenimiento/edit-mantenimiento.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/edit-mantenimiento/edit-mantenimiento.component.html
@@ -98,13 +98,6 @@
         </label>
       </div>
     </div>
-
-    <!--    <a type="button" class="btn btn-sm btn-secondary"-->
-    <!--       [hidden]="!showAgregarBtn"-->
-    <!--       (click)="onAddEquipo()">-->
-    <!--      <clr-icon shape="plus"></clr-icon>-->
-    <!--      Agregar-->
-    <!--    </a>-->
   </section>
   <br>
   <hr>
@@ -117,25 +110,25 @@
     </div>
 
     <clr-datagrid>
-      <clr-dg-column>Código</clr-dg-column>
-      <clr-dg-column>Descripción</clr-dg-column>
-      <clr-dg-column>Tipo</clr-dg-column>
-      <clr-dg-column>Marca</clr-dg-column>
-      <clr-dg-column>Modelo</clr-dg-column>
-      <clr-dg-column>Representante</clr-dg-column>
-      <clr-dg-column>Precio</clr-dg-column>
-      <clr-dg-column>Cantidad Solicitada</clr-dg-column>
-      <clr-dg-column></clr-dg-column>
+      <clr-dg-column class="table-header cod-cant-field">Código</clr-dg-column>
+      <clr-dg-column class="table-header">Descripción</clr-dg-column>
+      <clr-dg-column class="table-header">Tipo</clr-dg-column>
+      <clr-dg-column class="table-header">Marca</clr-dg-column>
+      <clr-dg-column class="table-header">Modelo</clr-dg-column>
+      <clr-dg-column class="table-header">Representante</clr-dg-column>
+      <clr-dg-column class="table-header">Precio</clr-dg-column>
+      <clr-dg-column class="table-header cod-cant-field">Cantidad Solicitada</clr-dg-column>
+      <clr-dg-column class="table-header cod-cant-field"></clr-dg-column>
       <clr-dg-row *ngFor="let detalle of solicitudRepuestoDetalles">
-        <clr-dg-cell>{{detalle.repuesto.codigo}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.repuesto.descripcionArticulo}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.repuesto.tipoEquipo?.tipo}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.repuesto.modeloEquipo?.marca}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.repuesto.modeloEquipo?.modelo}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.repuesto.representante?.nombre}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.repuesto.precio}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.cantidadSolicitada}}</clr-dg-cell>
-        <clr-dg-cell>
+        <clr-dg-cell class="table-column cod-cant-field">{{detalle.repuesto.codigo}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.repuesto.descripcionArticulo}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.repuesto.tipoEquipo?.tipo}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.repuesto.modeloEquipo?.marca}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.repuesto.modeloEquipo?.modelo}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.repuesto.representante?.nombre}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.repuesto.precio}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.cantidadSolicitada}}</clr-dg-cell>
+        <clr-dg-cell class="table-column cod-cant-field">
           <a type="button" class="btn btn-sm btn-secondary"
              (click)="editarRepuesto(detalle)">
             <clr-icon shape="plus"></clr-icon>
