--- a/client-app/src/app/home/mantenimiento/repuestos/lista-repuestos/lista-repuestos.component.html
+++ b/client-app/src/app/home/mantenimiento/repuestos/lista-repuestos/lista-repuestos.component.html
@@ -41,27 +41,26 @@
         </div>
       </div>
     </clr-dg-action-bar>
-    <clr-dg-column>Código</clr-dg-column>
-    <clr-dg-column>Descripción</clr-dg-column>
-    <clr-dg-column>Precio</clr-dg-column>
-    <clr-dg-column>Cantidad Adquirida</clr-dg-column>
-    <clr-dg-column>Stock</clr-dg-column>
-    <clr-dg-column>Tipo</clr-dg-column>
-    <clr-dg-column>Marca</clr-dg-column>
-    <clr-dg-column>Modelo</clr-dg-column>
-    <clr-dg-column>Representante</clr-dg-column>
-    <clr-dg-column></clr-dg-column>
+    <clr-dg-column class="table-header cod-cant-field">Código</clr-dg-column>
+    <clr-dg-column class="table-header">Descripción</clr-dg-column>
+    <clr-dg-column class="table-header">Precio</clr-dg-column>
+    <clr-dg-column class="table-header">Cantidad Adquirida</clr-dg-column>
+    <clr-dg-column class="table-header cod-cant-field">Stock</clr-dg-column>
+    <clr-dg-column class="table-header">Tipo</clr-dg-column>
+    <clr-dg-column class="table-header">Marca</clr-dg-column>
+    <clr-dg-column class="table-header">Modelo</clr-dg-column>
+    <clr-dg-column class="table-header">Representante</clr-dg-column>
     <clr-dg-row *ngFor="let repuesto of repuestos" (click)="selectRepuesto(repuesto)"
                 [class.selectRepeusto]="repuesto === repuestoSeleccionado">
-      <clr-dg-cell>{{repuesto?.codigo}}</clr-dg-cell>
-      <clr-dg-cell>{{repuesto?.descripcionArticulo}}</clr-dg-cell>
-      <clr-dg-cell>{{repuesto?.precio}}</clr-dg-cell>
-      <clr-dg-cell>{{repuesto?.cantidadAdquirida}}</clr-dg-cell>
-      <clr-dg-cell>{{repuesto?.cantidadExistente}}</clr-dg-cell>
-      <clr-dg-cell>{{repuesto?.tipoEquipo?.tipo}}</clr-dg-cell>
-      <clr-dg-cell>{{repuesto?.modeloEquipo?.marca}}</clr-dg-cell>
-      <clr-dg-cell>{{repuesto?.modeloEquipo?.modelo}}</clr-dg-cell>
-      <clr-dg-cell>{{repuesto?.representante?.nombre}}</clr-dg-cell>
+      <clr-dg-cell class="table-column cod-cant-field">{{repuesto?.codigo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.descripcionArticulo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.precio}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.cantidadAdquirida}}</clr-dg-cell>
+      <clr-dg-cell class="table-column cod-cant-field">{{repuesto?.cantidadExistente}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.tipoEquipo?.tipo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.modeloEquipo?.marca}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.modeloEquipo?.modelo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{repuesto?.representante?.nombre}}</clr-dg-cell>
     </clr-dg-row>
 
     <clr-dg-footer>
