--- a/client-app/src/app/home/mantenimiento/solicitud-repuesto/edit-solicitud/edit-solicitud.component.css
+++ b/client-app/src/app/home/mantenimiento/solicitud-repuesto/edit-solicitud/edit-solicitud.component.css
@@ -1,4 +1,4 @@
-.form-add-edit-repuesto-title{
+.form-add-edit-sol-repuesto-title{
   font-weight: bold;
   text-align: center;
 }
@@ -10,4 +10,36 @@
 
 .form-add-edit-repuesto-label {
   font-weight: bold !important;
+}
+
+.select .select-form-form-edit-repuesto {
+  border: 1px solid rgba(34, 36, 38, 0.50) !important;
+  border-radius: 0 !important;
+  border-image: initial !important;
+  -webkit-appearance: menulist !important;
+  align-items: center !important;
+  background-color: white !important;
+  cursor: default;
+  background: linear-gradient(to bottom, transparent 95%, #0094d2 95%) no-repeat;
+  height: 30px !important;
+  margin-left: 1% !important;
+  width: 100% !important;
+  display: block;
+}
+
+
+.table-header {
+  font-size: 13px !important;
+  font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif !important;
+  text-align: center !important;
+}
+
+.table-column {
+  font-size: 12px !important;
+  font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif !important;
+}
+
+.cod-cant-field {
+  min-width: 5% !important;
+  width: 5% !important;
 }
