--- a/client-app/src/app/home/mantenimiento/solicitud-repuesto/edit-solicitud/edit-solicitud.component.html
+++ b/client-app/src/app/home/mantenimiento/solicitud-repuesto/edit-solicitud/edit-solicitud.component.html
@@ -5,8 +5,14 @@
       <label class="form-add-edit-repuesto-label" for="estado">Estado:</label>
     </div>
     <div class="col-xs-3">
-      <input class="form-control" id="estado"
-             name="codigoDes" [(ngModel)]="estado">
+      <div class="select form-control">
+        <select class="select-form-form-edit-repuesto" id="estado"
+                name="estado" [(ngModel)]="estado" #selectEstado
+                (change)="onSelectedEstadoSolicitud(selectEstado.value)">
+          <option *ngFor="let estado of estados"
+                  value={{estado.nombre}}>{{estado.nombre}}
+        </select>
+      </div>
     </div>
     <div class="col-xs-1"></div>
     <div class="col-xs-1">
@@ -32,33 +38,33 @@
           </button>
         </div>
       </clr-dg-action-bar>
-      <clr-dg-column>Código</clr-dg-column>
-      <clr-dg-column>Descripción</clr-dg-column>
-      <clr-dg-column>Tipo</clr-dg-column>
-      <clr-dg-column>Marca</clr-dg-column>
-      <clr-dg-column>Modelo</clr-dg-column>
-      <clr-dg-column>Representante</clr-dg-column>
-      <clr-dg-column>Precio</clr-dg-column>
-      <clr-dg-column>Cantidad Solicitada</clr-dg-column>
-      <clr-dg-column></clr-dg-column>
+      <clr-dg-column class="table-header cod-cant-field">Código</clr-dg-column>
+      <clr-dg-column class="table-header">Descripción</clr-dg-column>
+      <clr-dg-column class="table-header">Tipo</clr-dg-column>
+      <clr-dg-column class="table-header">Marca</clr-dg-column>
+      <clr-dg-column class="table-header">Modelo</clr-dg-column>
+      <clr-dg-column class="table-header">Representante</clr-dg-column>
+      <clr-dg-column class="table-header">Precio</clr-dg-column>
+      <clr-dg-column class="table-header cod-cant-field">Cantidad Solicitada</clr-dg-column>
+      <clr-dg-column class="table-header cod-cant-field"></clr-dg-column>
       <clr-dg-row *ngFor="let detalle of solicitudRepuestoDetalles">
-        <clr-dg-cell>{{detalle.repuesto?.codigo}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.repuesto?.descripcionArticulo}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.repuesto?.tipoEquipo?.tipo}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.repuesto?.modeloEquipo?.marca}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.repuesto?.modeloEquipo?.modelo}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.repuesto?.representante?.nombre}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.repuesto?.precio}}</clr-dg-cell>
-        <clr-dg-cell>{{detalle.cantidadSolicitada}}</clr-dg-cell>
-        <clr-dg-cell>
+        <clr-dg-cell class="table-column cod-cant-field">{{detalle.repuesto?.codigo}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.repuesto?.descripcionArticulo}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.repuesto?.tipoEquipo?.tipo}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.repuesto?.modeloEquipo?.marca}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.repuesto?.modeloEquipo?.modelo}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.repuesto?.representante?.nombre}}</clr-dg-cell>
+        <clr-dg-cell class="table-column">{{detalle.repuesto?.precio}}</clr-dg-cell>
+        <clr-dg-cell class="table-column cod-cant-field">>{{detalle.cantidadSolicitada}}</clr-dg-cell>
+        <clr-dg-cell class="table-header cod-cant-field">
           <a class="btn btn-sm btn-warning"
              (click)="eliminarDetalleRepuesto(detalle)">
-            Eliminar
+            <clr-icon shape="trash"></clr-icon>
           </a>
           <a type="button" class="btn btn-sm btn-secondary"
              (click)="editRepuesto(detalle)">
             <clr-icon shape="plus"></clr-icon>
-            Editar
+            <clr-icon shape="pencil"></clr-icon>
           </a>
         </clr-dg-cell>
       </clr-dg-row>
